# HalfHex

./: .gitignore  CLAUDE.md  README.md  analyze_profile.py  build_android.sh  convert_to_qnn.sh  export_to_onnx.py  generate_calibration_data.py  qnn_htp_runtime_prompt.md  quantization_config_int4.json  run_baseline.sh  setup_device.sh  setup_env.sh
baselines/: llamacpp_baseline.txt
device/: run_benchmark.sh  sandbox_init.sh
docs/: ARCHITECTURE.md  BUILD_GUIDE.md  DEVICE_SAFETY.md  SECURITY.md
notebooks/: onnx_export_colab.ipynb
prompts/: vajra_phase1_prompt.md  vajra_phase2_prompt.md  vajra_phase3_prompt.md  vajra_phase4_prompt.md  vajra_phase5_prompt.md
qnn_llm_runtime/: CMakeLists.txt
qnn_llm_runtime/benchmarks/: run_benchmarks.sh
qnn_llm_runtime/include/: KVCacheManager.h  MemoryGuard.h  Profiler.h  QnnRuntime.h  ThermalMonitor.h  TokenizerWrapper.h
qnn_llm_runtime/include/QNN/: QnnInterface.h  QnnTypes.h
qnn_llm_runtime/jni/: InferenceJNI.cpp
qnn_llm_runtime/src/: KVCacheManager.cpp  MemoryGuard.cpp  Profiler.cpp  QnnRuntime.cpp  ThermalMonitor.cpp  TokenizerWrapper.cpp  main.cpp
qnn_llm_runtime/tests/: test_accuracy.cpp  test_framework.h  test_kv_cache.cpp  test_main.cpp  test_memory_guard.cpp  test_perf_regression.cpp  test_profiler.cpp  test_thermal_monitor.cpp
results/: comparison.md
